# picopico

./: .gitignore  CMakeLists.txt  README.md  bootstrap.ps1  build.ps1  buildgen.ps1  openocd.cfg  picopico.cproject.yaml  picopico.csolution.yaml  profile.ps1  sdk_options.cmake  vcpkg-configuration.json
blinky/: README.md
cmake/: cmsis.cmake  lvgl.cmake  perf_counter.cmake
lvgl/: README.md  lvgl.cproject.yaml
src/: lv_conf.h  main.c
